[package]
name = "funnel"
version = "0.1.0"
edition = "2021"

[dependencies]
telegrams = { version = "0.4", git = "https://github.com/dump-dvb/telegrams" }
stop-names = { version = "0.4", git = "https://github.com/dump-dvb/stop-names" }

tonic = "0.7"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

ws_stream_tungstenite = "0.8"
tokio-tungstenite = "*"
#async-tungstenite = {version = "*", features = ["tokio-runtime"]}
tungstenite = "0.17"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

bus = "2.3"
futures-util = "*"

[build-dependencies]
tonic-build = "0.7"
